#############################################################################
BETA PUBLIC RELEASE VERSION 0.3.2       ??-??-04
#############################################################################
  - NEW FEATURES
    * Updated tutorial with more mg-auto examples
    * Updated apbs.spec file for generating RPMs on more platforms.
    * Added new Python wrapper to tools/python directory showing how to run 
      APBS without PQR and .in inputs.
    * Updated tools/conversion/pdb2pqr to a new version (0.1.0) of PDB2PQR,
      which now can handle nucleic acids, rebuild missing heavy atoms, add
      hydrogens, and perform some optimization.
  - BUG FIXES
    * The dimensions of the fine grids in the pka-lig example calculations
      were increased to give more reliable results (albeit ones which don't
      agree with the reported UHBD values as well).
    * hz in mgparse.c causes name clash with AIX environmental variable;
      fixed.
    * Fixed documentation to state that using a kappa map does not ignore
      ELEC ION statements.
    * Added a stability fix for printing charge densities for LPBE-type
      calculations.
    * Fixed a bug in NPBE calculations which led to incorrect charge 
      densities and slightly modified total energies.
	
#############################################################################
BETA PUBLIC RELEASE VERSION 0.3.1       04-13-04
#############################################################################
  - NEW FEATURES
    * New APBS tutorial
    * New tools/python/vgrid/mergedx.py script to merge dx files generated
      from parallel APBS runs back into a single dx file.
  - BUG FIXES
    * Fixed bug in parallel calculations where atoms or points on a border
      between two processors were not included.  Modified setup algorithm for 
      parallel calculations to allow partitions in order to obtain grid points 
      and spacing from the global grid information.