@@ -1,11 +1,13 @@
 #############################################################################
-BETA PUBLIC RELEASE VERSION 0.3.2       ??-??-04
+BETA PUBLIC RELEASE VERSION 0.3.2       11-10-04
 #############################################################################
   - NEW FEATURES
     * Updated tutorial with more mg-auto examples
     * Updated apbs.spec file for generating RPMs on more platforms.
     * Added new Python wrapper to tools/python directory showing how to run 
       APBS without PQR and .in inputs.
+    * Python wrappers are now configured to compile on more architectures/
+      from more compilers.
     * Updated tools/conversion/pdb2pqr to a new version (0.1.0) of PDB2PQR,
       which now can handle nucleic acids, rebuild missing heavy atoms, add
       hydrogens, and perform some optimization.
@@ -21,6 +23,10 @@ BETA PUBLIC RELEASE VERSION 0.3.2       ??-??-04
       calculations.
     * Fixed a bug in NPBE calculations which led to incorrect charge 
       densities and slightly modified total energies.
+    * Modified the origin when creating UHBD grids to match standard UHBD
+      format.
+    * Fixed VASSERT error caused by rounding error when reading in dx
+      grid files.
 	
 #############################################################################
 BETA PUBLIC RELEASE VERSION 0.3.1       04-13-04
